# vito-transcript-cli

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: README.md  architecture.md  troubleshooting.md
samples/: README.md
scripts/: auth_check.py  transcription_check.py
src/vito_transcript/: __init__.py  __main__.py  cli.py  cli_config.py  client.py  exceptions.py  models.py
src/vito_transcript/exporters/: __init__.py  json_exporter.py  markdown_exporter.py  srt_exporter.py  text_exporter.py
tests/: test_cli.py  test_client.py  test_exporters.py  test_models.py
