[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vito-transcript-cli"
version = "0.1.0"
description = "A CLI for transcribing audio with the RTZR STT file API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "vito-transcript-cli contributors" },
]
dependencies = [
    "python-dotenv>=1.0,<2.0",
    "requests>=2.31,<3.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
vito-transcript = "vito_transcript.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
